# tinyredis

./: CMakeLists.txt  README.md
include/: kvstore.hpp  repl.hpp  server.hpp
src/: kvstore.cpp  main.cpp  repl.cpp  server.cpp  server_main.cpp
tests/: kvstore_tests.cpp
